terraform-infrastructure.tf
provider "aws" {
  region = "eu-north-1"
}

# resource "aws_instance" "my_instance" {
#   ami               = "ami-0550c2ee59485be53"
#   instance_type     = "t3.micro"
#   key_name          = "AwsKey"
#   security_groups   = ["security-group-ogge"]
#   availability_zone = "eu-north-1a"
#   user_data         = <<-EOF
#   #!/bin/bash
#   # Update package lists
#   sudo yum update -y
#   sudo amazon-linux-extras enable docker
#   sudo yum install -y docker
#   sudo systemctl start docker
#   sudo systemctl enable docker
#   sudo usermod -aG docker ec2-user
#   echo eyJwYXlsb2FkIjoiR0dHNldmWU1qS3ZZRGxlNXE3QWFtc0w4V1VPNkFNNjdlWS8wcDRHajN5ZU9CVVZzK0tQVncxL3FzdGhnRW1Oa0Y4R2Q1RmxVSGVIK0FOM0crVlhvdWNCQW9iaC8veDJZTHlBeFpMb2Q3SlVhbzFpb3JYbVFxcy91eXIxTm8wcXVFMmJ2VDEyUkMycEM2emZ6T0lEWksvS3Y5cVhRYTRqWWxLMHhveWptV3FvdlBnMGFEcmI3LzJWUlg5UEpzOWIyNEYvMUphYXlqWTN3R21PclF6Y05rcU5NYWRVSkFrbG8yYWNDNlN6a3VUc0tsV3JmcVlsbSs0eGpBN1BFQTYyNzVKQjdEYU9kZTR3Znc1emVMNzUrT3h6eCtDVi9paHdQZXBETjVEajQ3NEhhRTFwN1hKdHlzSjBxOEJjN2pseDlLcG5YUjIvWm1qSStmck5VbnV5L0xlcDRsTGJjOXAyL2xvaFB [...]
#   docker pull 338315907544.dkr.ecr.eu-north-1.amazonaws.com/examensarbete:latest
#   docker run -d -p 80:80 338315907544.dkr.ecr.eu-north-1.amazonaws.com/examensarbete:latest
#   EOF
# }

resource "aws_launch_template" "example" {

  name          = "ogges-launch-template"
  description   = "Example Launch Template for Auto Scaling Group"
  image_id      = "ami-0550c2ee59485be53"
  instance_type = "t3.micro"
  key_name      = "AwsKey"

  iam_instance_profile {
    name = "NoCredentials" # Replace with your IAM role name or ARN
  }
  network_interfaces {
    device_index    = 0
    subnet_id       = "subnet-038809d3d73720fb5"
    security_groups = [aws_security_group.example.id]
  }
  user_data = base64encode(<<-EOF
  #!/bin/bash
  sudo yum update -y
  sudo yum install -y docker
  sudo systemctl start docker
  sudo systemctl enable docker
  sudo usermod -aG docker ec2-user
  sudo aws ecr get-login-password --region eu-north-1 | sudo docker login --username AWS --password-stdin 338315907544.dkr.ecr.eu-north-1.amazonaws.com
  sudo docker pull 338315907544.dkr.ecr.eu-north-1.amazonaws.com/examensarbete:latest
  sudo docker run -d -p 80:80 338315907544.dkr.ecr.eu-north-1.amazonaws.com/examensarbete:latest
  EOF
  )

}

resource "aws_security_group" "example" {
  name        = "security-group-ogge"
  description = "Example security group for port 80 (HTTP)"
  vpc_id      = "vpc-0fc88ebe86ed9b792"
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Define the target group
resource "aws_lb_target_group" "example" {
  name     = "ogges-target-group"
  port     = 80
  protocol = "HTTP"
  vpc_id   = "vpc-0fc88ebe86ed9b792"
}

# Create the Application Load Balancer (ALB)
resource "aws_lb" "example" {
  name               = "example-alb"
  internal           = false
  load_balancer_type = "application"
  subnets            = ["subnet-038809d3d73720fb5", "subnet-0b5058e004fd8e2bb", "subnet-06b09862b947ee15c"] # Specify your subnets

  enable_deletion_protection = false

  security_groups = [aws_security_group.example.id]

  enable_http2 = true
}

# Attach the target group to the ALB
resource "aws_lb_listener" "example" {
  load_balancer_arn = aws_lb.example.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.example.arn
  }
}


resource "aws_autoscaling_group" "example" {
  name              = "ogges-auto-scaling-group"
  target_group_arns = [aws_lb_target_group.example.arn]
  launch_template {
    id      = aws_launch_template.example.id
    version = "$Latest"
  }
  vpc_zone_identifier = ["subnet-038809d3d73720fb5", "subnet-0b5058e004fd8e2bb", "subnet-06b09862b947ee15c"] # Specify your subnet IDs here
  min_size            = 1
  max_size            = 3
  desired_capacity    = 2
}




resource "aws_codebuild_project" "example" {
  name          = "my-build"
  build_timeout = 5
  service_role  = "arn:aws:iam::338315907544:role/oggeaccess"

  source {
    type      = "CODECOMMIT"
    location  = "https://git-codecommit.eu-north-1.amazonaws.com/v1/repos/ExamensarbeteCC"
    buildspec = "buildspec.yml"
  }

  environment {
    compute_type = "BUILD_GENERAL1_SMALL"
    type         = "LINUX_CONTAINER"
    image        = "aws/codebuild/amazonlinux2-x86_64-standard:5.0"
    privileged_mode = true
  }

  artifacts {
    type = "NO_ARTIFACTS"
  }
}

data "aws_codecommit_repository" "example" {
  repository_name = "ExamensarbeteCC"

}

resource "aws_codepipeline" "example" {
  name     = "my-pipeline"
  role_arn = "arn:aws:iam::338315907544:role/oggeaccesspipeline"

  artifact_store {
    location = aws_s3_bucket.example.bucket
    type     = "S3"
  }

  stage {
    name = "Source"

    action {
      name             = "SourceAction"
      category         = "Source"
      owner            = "AWS"
      provider         = "CodeCommit"
      version          = "1"
      output_artifacts = ["SourceArtifact"]

      configuration = {
        RepositoryName = "ExamensarbeteCC" # Replace with your CodeCommit repository name
        BranchName     = "main"
      }
    }
  }

  stage {
    name = "Build"

    action {
      name             = "BuildAction"
      category         = "Build"
      owner            = "AWS"
      provider         = "CodeBuild"
      input_artifacts  = ["SourceArtifact"]
      output_artifacts = ["BuildArtifact"]
      version          = "1"

      configuration = {
        ProjectName = aws_codebuild_project.example.name
      }
    }
  }
}

resource "aws_s3_bucket" "example" {
  bucket = "ogges-unika-hink-bucket"
}

# sudo aws ecr get-login-password --region eu-north-1 | sudo docker login --username AWS --password-stdin 338315907544.dkr.ecr.eu-north-1.amazonaws.com
#
#
